data/test/type_check/fail/issue_239b.v
genvar i;
always @(posedge clock.val) begin
  for (i = 0; i < 10; i = i + 1) begin end
end
